Resolve loading bar overlap issue

--- a/polaris-react/src/components/IndexTable/IndexTable.scss
+++ b/polaris-react/src/components/IndexTable/IndexTable.scss
@@ -8,7 +8,7 @@
   --pc-index-table-sticky-cell: 31;
   --pc-index-table-scroll-bar: 35;
   --pc-index-table-bulk-actions: 36;
-  --pc-index-table-loading-panel: 37;
+  --pc-index-table-sticky-table: 37;
   // stylelint-enable
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   position: relative;
@@ -57,7 +57,7 @@ $loading-panel-height: 53px;
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   position: absolute;
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-  z-index: var(--pc-index-table-loading-panel);
+  z-index: var(--p-z-2);
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   top: 0;
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
@@ -495,7 +495,7 @@ $loading-panel-height: 53px;
   right: 0;
   visibility: hidden;
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-  z-index: var(--pc-index-table-loading-panel);
+  z-index: var(--pc-index-table-sticky-table);
 }
 
 .StickyTableHeader {
